# qix-rs-client

./: Cargo.toml  README.md  jsonrpcapi.json
src/: build_url.rs  hypercube_def.rs  lib.rs  main.rs
src/codegen/: main.rs
