[package]
name = "qix-rs"
version = "0.1.0"
authors = ["Michael Rutter <michael.john.rutter@gmail.com>"]


[[bin]]
name = "qix-codegen"
path = "src/codegen/main.rs"

[dependencies]
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
failure = "0.1.1"
ws = "0.7.3"
url = "1.7.0"
regex = "0.2.10"
